--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -5,8 +5,8 @@
     position: fixed;
     bottom: 0;
     padding: 25px 50px;
-    font-family: 'Montserrat-Thin';
-    font-size: 11px;
+    font-family: Montserrat-Regular;
+    font-size: 10px;
     border-top: 1px solid #3D3E40;
   
     .left {
@@ -14,13 +14,16 @@
         align-items: center;
 
         img {
-            width: 45px;
-            margin-right: 15px;
+            width: 38px;
+            margin-right: 5px;
         }
 
         a {
-            color: #777;
             margin: 5px 0 0 50px;
+            color: #47494E;
+            letter-spacing: 0.21px;
+            text-align: center;
+            line-height: 11px;
 
             &.menu.selected {
                 color: #aaa;
@@ -34,13 +37,24 @@
 
         .open-date {
             background-color: #25262B;
-            border-radius: 10px;
             margin: 0 20px;
             padding: 5px 15px;
+            border-radius: 7px;
         }
 
         span {
-            color: white;
+            font-family: Montserrat-SemiBold;
+            color: #FFFFFF;
+            letter-spacing: 0.63px;
+
+            .symbol {
+                font-family: Lucida Grande;
+                font-weight: bold;
+            }
+        }
+
+        img {
+            width: 20px;
         }
     }
 
