--- a/src/styles/components/_homepage.scss
+++ b/src/styles/components/_homepage.scss
@@ -1,9 +1,9 @@
 main {
     display: flex;
+    height: calc(100vh - 146px);
 
     .left-content {
         width: 20%;
-        height: calc(100vh - 153px);
         position: relative;
         display: flex;
         align-items: flex-end;
@@ -15,7 +15,7 @@ main {
             width: 100%;
             padding-top: 100%;
             position: absolute;
-            bottom: -35%;
+            top: 77vh;
             border-radius: 50%;
             background-image: linear-gradient(to right, #222428, #2e3139);
         }
@@ -28,21 +28,21 @@ main {
 
             &::before {
                 content: '';
-                width: 16px;
-                height: 16px;
+                width: 19px;
+                height: 19px;
                 position: absolute;
-                top: -20px;
+                top: -25px;
                 right: -2px;
                 background-image: radial-gradient(#4a4c51, #2f3136);
                 border-radius: 50%;
             }
             &::after {
                 content: '';
-                width: 16px;
-                height: 16px;
+                width: 19px;
+                height: 19px;
                 position: absolute;
-                top: -16px;
-                right: -8px;
+                top: -19px;
+                right: -9.5px;
                 display: flex;
                 align-items: center;
                 justify-content: center;
@@ -61,21 +61,21 @@ main {
 
             &::before {
                 content: '';
-                width: 16px;
-                height: 16px;
+                width: 19px;
+                height: 19px;
                 position: absolute;
-                top: -20px;
+                top: -25px;
                 right: -2px;
                 background-image: radial-gradient(#4a4c51, #2f3136);
                 border-radius: 50%;
             }
             &::after {
                 content: '';
-                width: 16px;
-                height: 16px;
+                width: 19px;
+                height: 19px;
                 position: absolute;
-                top: -16px;
-                right: -8px;
+                top: -19px;
+                right: -9.5px;
                 display: flex;
                 align-items: center;
                 justify-content: center;
@@ -94,21 +94,21 @@ main {
 
             &::before {
                 content: '';
-                width: 16px;
-                height: 16px;
+                width: 19px;
+                height: 19px;
                 position: absolute;
-                top: -20px;
+                top: -25px;
                 right: -2px;
                 background-image: radial-gradient(#4a4c51, #2f3136);
                 border-radius: 50%;
             }
             &::after {
                 content: '';
-                width: 16px;
-                height: 16px;
+                width: 19px;
+                height: 19px;
                 position: absolute;
-                top: -16px;
-                right: -8px;
+                top: -19px;
+                right: -9.5px;
                 display: flex;
                 align-items: center;
                 justify-content: center;
@@ -123,7 +123,6 @@ main {
 
     .action-content {
         width: 35%;
-        height: calc(100vh - 153px);
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -131,22 +130,30 @@ main {
         color: white;
         border-right: 1px solid #3D3E40;
         border-left: 1px solid #3D3E40;
-        box-shadow: 15px 0px 20px #26272C;
+        box-shadow: 20px 0px 20px -6px #26272C;
 
         span.text {
+            font-family: Montserrat-Bold;
+            font-size: 36px;
+            color: #FFFFFF;
+            letter-spacing: 0.89px;
             text-align: center;
-            font-size: 28px;
             margin-bottom: 35px;
-            letter-spacing: 1px;
         }
 
         span.pre-sale {
-            background-color: #25262B;
-            border: 1px solid white;
-            padding: 15px 36px;
-            border-radius: 15px;
-            font-size: 14px;
-            font-family: 'Montserrat-Regular';
+            font-family: Montserrat-Medium;
+            font-size: 18px;
+            color: #FFFFFF;
+            letter-spacing: 0.9px;
+            text-align: center;
+            background-image: url("../images/buy_button.svg");
+            background-size: 100% 100%;
+            padding: 15px 36px 25px;
+            cursor: pointer;
+            //background-color: #25262B;
+            //border: 1px solid white;
+            //border-radius: 15px;
         }
     }
 
@@ -165,18 +172,20 @@ main {
             display: flex;
             align-items: flex-end;
             color: white;
-            font-size: 10px;
+            font-size: 11px;
             border-right: 10px solid transparent;
             border-image: linear-gradient(to top, #2a2c2f , #2E3137);
             border-image-slice: 1;
+            font-family: Montserrat-Thin;
 
             .one {
                 width: 50%;
                 height: 30%;
                 position: relative;
+
                 div {
-                    width: 25px;
-                    height: 25px;
+                    width: 30px;
+                    height: 30px;
                     display: flex;
                     align-items: center;
                     justify-content: center;
@@ -192,8 +201,8 @@ main {
                 height: 40%;
                 position: relative;
                 div {
-                    width: 25px;
-                    height: 25px;
+                    width: 30px;
+                    height: 30px;
                     display: flex;
                     align-items: center;
                     justify-content: center;
@@ -210,18 +219,19 @@ main {
             display: flex;
             align-items: flex-end;
             color: white;
-            font-size: 10px;
+            font-size: 11px;
             border-right: 10px solid transparent;
             border-image: linear-gradient(to top, #2a2c2f , #2E3137);
             border-image-slice: 1;
+            font-family: Montserrat-Thin;
 
             .one {
                 width: 50%;
                 height: 75%;
                 position: relative;
                 div {
-                    width: 25px;
-                    height: 25px;
+                    width: 30px;
+                    height: 30px;
                     display: flex;
                     align-items: center;
                     justify-content: center;
@@ -237,8 +247,8 @@ main {
                 height: 50%;
                 position: relative;
                 div {
-                    width: 25px;
-                    height: 25px;
+                    width: 30px;
+                    height: 30px;
                     display: flex;
                     align-items: center;
                     justify-content: center;
@@ -255,15 +265,16 @@ main {
             display: flex;
             align-items: flex-end;
             color: white;
-            font-size: 10px;
+            font-size: 11px;
+            font-family: Montserrat-Thin;
 
             .one {
                 width: 50%;
                 height: 25%;
                 position: relative;
                 div {
-                    width: 25px;
-                    height: 25px;
+                    width: 30px;
+                    height: 30px;
                     display: flex;
                     align-items: center;
                     justify-content: center;
@@ -325,9 +336,10 @@ main {
             }
 
             .zed-logo {
+                width: 40px;
                 position: absolute;
                 bottom: 25px;
-                left: calc(50% - 12px);
+                left: calc(50% - 15px);
                 z-index: 99;
             }
         }
