Makeed left bottom circle a bit bigger

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -10,11 +10,15 @@
     .pages {
 
         a {
-            color: #484A50;
+            color: #7E8D95;
             letter-spacing: 0.38px;
             text-align: center;
             margin-right: 50px;
             text-decoration: none;
+
+            &:hover {
+                color: white;
+            }
 
             &.menu.selected {
                 color: white;
