--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -2,8 +2,6 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
-    position: fixed;
-    bottom: 0;
     padding: 25px 50px;
     font-family: Montserrat-Regular;
     font-size: 10px;
@@ -20,7 +18,7 @@
 
         a {
             margin: 5px 0 0 50px;
-            color: #819099;
+            color: #47494E;
             letter-spacing: 0.21px;
             text-align: center;
             line-height: 11px;
