--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -18,13 +18,18 @@
 
         a {
             margin: 5px 0 0 50px;
-            color: #47494E;
+            color: #819099;
             letter-spacing: 0.21px;
             text-align: center;
             line-height: 11px;
             text-decoration: none;
+
             &:hover {
                 color: white;
+            }
+            &:last-of-type {
+                color: #47494E;
+                cursor: default;
             }
 
             &.menu.selected {
