--- a/src/styles/components/_homepage.scss
+++ b/src/styles/components/_homepage.scss
@@ -16,6 +16,10 @@ main {
         overflow: hidden;
         background-image: linear-gradient(#282a2e, #2E3137);
 
+        @media screen and (min-width: 760px) and (max-width: 800px) {
+            display: none;
+        }
+
         &::after {
             content: '';
             width: 100%;
@@ -145,6 +149,10 @@ main {
             letter-spacing: 0.89px;
             text-align: center;
             margin-bottom: 35px;
+
+            @media screen and (max-width: 768px) {
+                font-size: 32px;
+            }
         }
 
         span.pre-sale {
@@ -160,6 +168,11 @@ main {
             //background-color: #25262B;
             //border: 1px solid white;
             //border-radius: 15px;
+
+            @media screen and (max-width: 768px) {
+                background-size: 100% 150%;
+                padding: 20px 83px 15px;
+            }
         }
     }
 
