--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -20,7 +20,7 @@
                 color: white;
             }
 
-            &:nth-last-of-type(1), &:nth-last-of-type(2) {
+            &:nth-last-of-type(1), &:nth-last-of-type(2), &:nth-last-of-type(3) {
                 color: #47494E;
                 cursor: default;
             }
