--- a/src/styles/components/_homepage.scss
+++ b/src/styles/components/_homepage.scss
@@ -16,7 +16,7 @@ main {
         overflow: hidden;
         background-image: linear-gradient(#282a2e, #2E3137);
 
-        @media screen and (min-width: 760px) and (max-width: 800px) {
+        @media screen and (max-width: 1024px) {
             display: none;
         }
 
@@ -149,10 +149,6 @@ main {
             letter-spacing: 0.89px;
             text-align: center;
             margin-bottom: 35px;
-
-            @media screen and (max-width: 768px) {
-                font-size: 32px;
-            }
         }
 
         span.pre-sale {
@@ -172,6 +168,22 @@ main {
             @media screen and (max-width: 768px) {
                 background-size: 100% 150%;
                 padding: 20px 83px 15px;
+            }
+        }
+
+        @media screen and (max-width: 1420px) {
+            span.text {
+                font-size: 30px;
+            }
+            span.pre-sale {
+                font-size: 16px;
+                background-size: 100% 123%;
+                padding: 20px 84px 29px;
+            }
+        }
+        @media screen and (max-width: 768px) {
+            span.text {
+                font-size: 32px;
             }
         }
     }
@@ -309,8 +321,13 @@ main {
 
     &.mobile {
         .left-content {
+            display: flex;
             width: 100%;
             height: calc(100vh - 102px);
+
+            @media screen and (min-width: 760px) and (max-width: 1024px) {
+                display: none;
+            }
 
             &::after {
                 top: 72vh;
