--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -42,6 +42,20 @@
     src: url('../fonts/CenturyGothic-Regular.ttf');
 }
 
+html {
+    font-size: 62.5%;
+
+    @media screen and (max-width: 1480px) {
+        font-size: 52.5%;
+    }
+    @media screen and (max-width: 1280px) {
+        font-size: 42.5%;
+    }
+    @media screen and (max-width: 1020px) {
+        font-size: 32.5%;
+    }
+}
+
 body {
     background-color: #2E3137;
 }
