--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -4,7 +4,7 @@
     justify-content: space-between;
     padding: 25px 50px;
     font-family: Montserrat-Regular;
-    font-size: 12px;
+    font-size: 1.2rem;
     border-bottom: 1px solid #3D3E40;
 
     .pages {
@@ -13,7 +13,7 @@
             color: #7E8D95;
             letter-spacing: 0.38px;
             text-align: center;
-            margin-right: 50px;
+            margin-right: 5rem;
             text-decoration: none;
 
             &:hover {
