--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -48,7 +48,7 @@
     &.mobile {
         justify-content: flex-end;
         border: none;
-        padding: 3rem;
+        padding: 0 3rem;
 
         .header-item {
             &:nth-child(1), &:nth-child(2) {
