--- a/src/styles/components/_accordion.scss
+++ b/src/styles/components/_accordion.scss
@@ -1,5 +1,8 @@
 .accordion {
-    width: 55%;
+    width: 75%;
+    @media screen and (max-width: 768px) {
+        width: 100%;
+    }
 }
 
 .panel {
@@ -11,7 +14,7 @@
         background: none;
         border: none;
         text-align: left;
-        padding: 25px 30px 25px 0;
+        padding: 2.5rem 3rem 2.5rem 0;
         transition: color .2s linear;
         cursor: pointer;
 
