Implemented contents of all footer pages

--- a/src/styles/components/_accordion.scss
+++ b/src/styles/components/_accordion.scss
@@ -19,7 +19,7 @@
         cursor: pointer;
 
         color: #B9BBBE;
-        font-family: Montserrat-SemiBold;
+        font-family: Montserrat-Bold;
         font-size: 1.6rem;
         font-weight: bold;
         letter-spacing: 0.21px;
